[gd_scene load_steps=7 format=3 uid="uid://didhoqclmsan6"]

[ext_resource type="FontFile" uid="uid://d2qsbiia2afr7" path="res://asset/visual/font/Boohong.otf" id="1_3cqnk"]
[ext_resource type="Script" path="res://Menu/paused_menu/pausedmenu.gd" id="1_4w5ur"]

[sub_resource type="Theme" id="Theme_q3f53"]
default_font = ExtResource("1_3cqnk")
default_font_size = 30

[sub_resource type="Theme" id="Theme_oru8b"]
default_font = ExtResource("1_3cqnk")
default_font_size = 30

[sub_resource type="Theme" id="Theme_44yxy"]
default_font = ExtResource("1_3cqnk")
default_font_size = 30

[sub_resource type="Theme" id="Theme_i737s"]
default_font = ExtResource("1_3cqnk")
default_font_size = 30

[node name="pausedmenu" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_4w5ur")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -107.0
offset_right = 318.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="continue_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_q3f53")
text = "Continue"

[node name="reload_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = SubResource("Theme_oru8b")
text = "Reload current level"

[node name="option_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_44yxy")
text = "Settings"

[node name="Goback_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_i737s")
text = "Go back to level selector menu"

[connection signal="pressed" from="Panel/VBoxContainer/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/reload_button" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/option_button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Goback_button" to="." method="_on_goback_button_pressed"]
